# SlicerVirtualMouseCursor

./: CMakeLists.txt  README.md
VirtualCursor/: CMakeLists.txt  VirtualCursor.py
VirtualCursor/Resources/UI/: VirtualCursor.ui
